--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,11 @@
-.ss{
-  height: 100vh;
-  background-color: rgb(196, 196, 202);
+.container-fluid{
+display: flex;
+flex-direction: column;
+  min-height: 100vh;
+}
+
+
+
+footer {
+margin-top: auto;
 }
