--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -7,6 +7,7 @@ html {
 body {
   text-transform: capitalize;
   font-family: 'Roboto', sans-serif;
+  position: relative;
 }
 
 .layout-container{
@@ -18,6 +19,6 @@ body {
   max-width: 150rem !important;
 }
 // navbar 
-nav {
+.nav-bar {
   background-color: #161880;
 }
