--- a/src/assets/queries.scss
+++ b/src/assets/queries.scss
@@ -1,44 +1,110 @@
-// media query
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 576px) {
   html {
     font-size: 20%;
   }
+
+  .swiper {
+    min-height: 330px;
+    .swiper-slide {
+      height: 310px;
+    }
+    .card-body {
+      min-height: 155px;
+    }
+  }
 }
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (min-width: 576px) {
   html {
     font-size: 24%;
   }
+  .swiper {
+    min-height: 350px !important;
+    .swiper-slide {
+      height: 335px;
+    }
+    .card-body {
+      min-height: 175px;
+    }
+  }
+  
 }
 
 
 /* Medium devices (landscape tablets, 768px and up) */
+
 @media only screen and (min-width: 768px) {
-    html {
+  html {
     font-size: 35%;
+  }
+  
+  .swiper {
+    min-height: 375px !important;
+    .swiper-slide {
+      height: 350px !important;
+    }
+    .card-body {
+      min-height: 190px;
+    }
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    html {
+  html {
     font-size: 43%;
   }
+  .swiper {
+    min-height: 450px !important;
+    .swiper-slide {
+      min-height: 420px !important;
+    }
+    .card-body {
+      min-height: 230px;
+    }
+  }
+
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
+
 @media only screen and (min-width: 1200px) {
-    html {
+  html {
     font-size: 50%;
   }
+
+  .swiper {
+    min-height: 510px !important;
+    .swiper-slide {
+      min-height: 450px !important;
+    }
+    .card-body {
+      min-height: 270px;
+    }
+  }
+
 }
 
 /* Extra large devices (large laptops and desktops, 1400px and up) */
+
 @media only screen and (min-width: 1400px) {
-    html {
+  html {
     font-size: 62.5%;
   }
+
+  .swiper {
+    min-height: 620px !important;
+    .swiper-slide {
+      min-height: 500px;
+    }
+    .card-body {
+      min-height: 320px;
+    }
+  }
+
 }
+
 // ////////////////////////////////////////////////////////////////////////////////////////////////////////////
